--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "react-hook-form": "^7.52.1",
         "react-router-dom": "^6.24.1",
         "react-transition-group": "^4.4.5",
         "sass": "^1.77.6"
